// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pentagon renders with children 1`] = `
<DocumentFragment>
  .cache-6becqf {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  width: 48px;
  height: 48px;
  background-color: #FFE1E7;
}

<div
    class="cache-6becqf e1h89m1f0"
  >
    X
  </div>
</DocumentFragment>
`;

exports[`Pentagon renders with custom color 1`] = `
<DocumentFragment>
  .cache-s63y88 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  width: 48px;
  height: 48px;
  background-color: yellow;
}

<div
    class="cache-s63y88 e1h89m1f0"
  >
    X
  </div>
</DocumentFragment>
`;

exports[`Pentagon renders with custom size 1`] = `
<DocumentFragment>
  .cache-z9go0q {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  width: 200px;
  height: 200px;
  background-color: #FFE1E7;
}

<div
    class="cache-z9go0q e1h89m1f0"
  >
    X
  </div>
</DocumentFragment>
`;

exports[`Pentagon renders with default props 1`] = `
<DocumentFragment>
  .cache-6becqf {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
  width: 48px;
  height: 48px;
  background-color: #FFE1E7;
}

<div
    class="cache-6becqf e1h89m1f0"
  />
</DocumentFragment>
`;
